2017-02-13  Barton E. Schaefer  <schaefer@zsh.org>

	* 40539: Fabian Klotzl: Completion/Unix/Command/_gcc: typo in MIPS
	branch of argument selection

	* 40524: Src/Modules/example.c: do not free a null array

2017-02-13  Peter Stephenson  <p.stephenson@samsung.com>

	* 40537: Doc/Zsh/builtins.yo: document the foregoing.

	* Sebastian: 40536: Src/builtin.c, Src/zsh.h: prepend directory
	of function autoload with absolute path to fpath if loading a
	function by relative path.

2017-02-10  Oliver Kiddle  <opk@zsh.org>

	* 40512: Completion/Unix/Command/_entr: new entr completion

	* unposted: Completion/Linux/Command/_lsusb: using a colon in
	the tag name was not such a good idea

2017-02-09  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* 40510: Misc/vcs_info-examples, README: vcs_info: Update the
	$psvar episode with '%'-unescaping. (Follow-up to 40492.)

	* 40492: Doc/Zsh/contrib.yo, Etc/BUGS,
	Functions/VCS_Info/Backends/VCS_INFO_get_data_hg,
	Functions/VCS_Info/VCS_INFO_set-patch-format, README: vcs_info:
	Escape '%' signs in payloads.

2017-02-08  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* unposted: Completion/Unix/Command/_subversion: _svn: Fix
	'--show-revs' completion.

	* 40508: Src/Modules/parameter.c, Test/V06parameter.ztst:
	Make $functions re-settable.

2017-02-07  Peter Stephenson  <p.stephenson@samsung.com>

	* Sebastian: 40507: Src/Modules/db_gdbm.c: remove extraneous
	null byte creating records.

2017-02-07  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* 40494: Completion/Unix/Command/_git: Use slashes matchspec
	for references (as already used for branch names).

2017-02-07  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* 40493/0002: Completion/Unix/Command/_git: _git-checkout:
	Reorder default completions.

2017-02-07  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* 40493/0001: Completion/Unix/Command/_git: _git-checkout:
	No functional change.

2017-02-06  Peter Stephenson  <p.stephenson@samsung.com>

	* Jan Matejek: 40434: Completion/Unix/Command/_patchutils: